_archive/content-services/3.4/concepts/library-items-individual.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: 
option: 
---

# Working with individual library items

Once the document library is populated with content items, site members can access and work with individual items stored in the library. In addition to adding more content, members can view, download, edit, and delete content items.

-   **[Viewing an item](../tasks/library-item-view.md)**  
The preview feature enables you to view a content item directly in the application without having to download it to your computer or check it out. For documents containing multiple pages, navigation features enable you to view all pages. In addition to the preview, this page displays full document details and a comment feature that enables site members to add comments on the item being viewed.
-   **[Editing library content](../concepts/library-item-edit-intro.md)**  
There are multiple ways to edit document library content. Not every method is available for each content item.
-   **[Downloading content to your computer](../tasks/library-item-download.md)**  
You can download an item from the **Library** tree or from one of the browsing views \(**All Documents**, **I’m Editing**, **Others are Editing**, **Recently Modified**, **Recently Added**, **My Favorites**\) to your computer.
-   **[Updating content](../tasks/library-item-upload.md)**  
The **Upload New Version** action enables you to update a content item in the document library with content from your computer.
-   **[Starting a workflow](../tasks/library-item-assign-workflow.md)**  
In the Document Library component, you attach a workflow directly to one or more content items. Starting a workflow generates a workflow task. You then manage the tasks resulting from workflow on the My Tasks dashlet on your personal dashboard.
-   **[Managing aspects](../tasks/library-item-manage-aspects.md)**  
The **Manage Aspects** feature lets you add aspects to a content item. Alfresco Share provides you with a list of default aspects.
-   **[Changing the content type](../tasks/library-item-change-type.md)**  
 Each library item has a default content type. You can change the content type from its default to a more specific value.

**Parent topic:**[The library](../concepts/library-intro.md)

