_archive/content-services/4.0/concepts/library-items-individual.md
---
author: [Alfresco Documentation, Alfresco Documentation]
audience: 
category: 
option: 
---

# Working with individual library items

Once the document library is populated with content items, site members can access and work with individual items stored in the library. In addition to adding more content, members can view, download, edit, and delete content items.

-   **[Viewing an item](../tasks/library-item-view.md)**  
The preview feature enables you to view a content item directly in the application without having to download it to your computer or check it out. For documents containing multiple pages, navigation features enable you to view all pages. In addition to the preview this page displays full document details and a comment feature that enables site members to add comments on the item being viewed.
-   **[Editing library content](../concepts/library-item-edit-intro.md)**  
There are multiple ways to edit document library content. Not every method is available for each content item.
-   **[Downloading content to your computer](../tasks/library-item-download.md)**  
You can download any content item from the library to your computer. You can access the item from the tree structure or any of the available browsing views.
-   **[Updating content](../tasks/library-item-upload.md)**  
You can upload content from your computer to easily update a content item in the library. You can perform this task on a locked or unlocked library item.
-   **[Organizing your content](../tasks/library-item-move-dragndrop.md)**  
The drag and drop functionality in the library lets you easily move a single item or folder to another location within the current site.
-   **[Starting a workflow](../tasks/library-item-assign-workflow.md)**  
In the document library you can attach a workflow directly to one or more content items. Starting a workflow generates a workflow task. You then manage the tasks resulting from workflow on the My Tasks dashlet on your personal dashboard.
-   **[Publishing content](../tasks/library-item-publish.md)**  
The publishing feature lets you deliver library content through various social media websites. When you publish the selected content you can also publicize the event by posting a message through sites such as Facebook, Twitter, and LinkedIn.
-   **[Removing published content](../tasks/library-item-unpublish.md)**  
You can remove content published to an external website directly from the document library.
-   **[Managing aspects](../tasks/library-item-manage-aspects.md)**  
The **Manage Aspects** feature lets you add aspects to a content item. Alfresco Share provides you with a list of default aspects.
-   **[Changing the content type](../tasks/library-item-change-type.md)**  
 Each library item has a default content type. You can change the content type from its default to a more specific value.

**Parent topic:**[Working with content in a library](../concepts/library-intro.md)

